# test-conan-github

./: .gitignore  CMakeLists.txt  LICENSE.in  LICENSE.md  README.md  conanfile.txt  helloworld_en_GB.ts  helloworld_en_US.ts  helloworld_nb_NO.ts  main.cpp
.github/workflows/: ci.yml
Resources/: Info.plist.in
